# langtons_ant

./: Cargo.toml  profile.json
src/: ant.rs  cursed_tests.txt  direction.rs  grid.rs  main.rs  rule.rs  state.rs
