[package]
name = "langtons_ant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
block-grid = "0.1.3"
hdrhistogram = "7.5.2"
histo = "1.0.0"
image = "0.24.7"
raylib = "3.7.0"
zorder = "0.1.0"
